搭建基础框架

--- a/web/src/main/webapp/WEB-INF/views/base/_header.html
+++ b/web/src/main/webapp/WEB-INF/views/base/_header.html
@@ -1,22 +1,5 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <!-- Meta, title, CSS, favicons, etc. -->
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-    <title>Gentelella Alela!</title>
-
-    <!-- Bootstrap -->
-    <link href="/resources/plugins/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <!-- Font Awesome -->
-    <link href="/resources/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
-    <!-- Custom Theme Style -->
-    <link href="/resources/css/custom.min.css" rel="stylesheet"/>
-
-</head>
 <body>
     <!-- start: HEADER -->
     <div th:fragment="header" class="navbar navbar-inverse navbar-fixed-top">
@@ -151,12 +134,11 @@
         </div>
     <!-- end: HEADER -->
     </div>
-    <!--jQuery-->
-    <script src="/resources/plugins/jquery/dist/jquery.min.js"></script>
-    <!-- Bootstrap -->
-    <script src="/resources/plugins/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- Custom Theme Scripts -->
-    <script src="/resources/js/custom.min.js"></script>
-
+    <!--&lt;!&ndash;jQuery&ndash;&gt;-->
+    <!--<script src="/resources/plugins/jquery/dist/jquery.min.js"></script>-->
+    <!--&lt;!&ndash; Bootstrap &ndash;&gt;-->
+    <!--<script src="/resources/plugins/bootstrap/dist/js/bootstrap.min.js"></script>-->
+    <!--&lt;!&ndash; Custom Theme Scripts &ndash;&gt;-->
+    <!--<script src="/resources/js/custom.min.js"></script>-->
 </body>
 </html>
