--- a/web/src/main/webapp/WEB-INF/views/book/bb.html
+++ b/web/src/main/webapp/WEB-INF/views/book/bb.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorator="base/layout">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml" layout:decorator="base/_layout">
 
 <head>
     <meta charset="utf-8"/>
