--- a/web/src/main/webapp/WEB-INF/views/base/_header.html
+++ b/web/src/main/webapp/WEB-INF/views/base/_header.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<body>
     <!-- start: HEADER -->
     <div th:fragment="header" class="navbar navbar-inverse navbar-fixed-top">
         <!-- start: TOP NAVIGATION CONTAINER -->
@@ -84,47 +83,47 @@
                                     </li>
                                 </ul>
                             </div>
-                            <!--<div class="menu_section">-->
-                                <!--<h3>Live On</h3>-->
-                                <!--<ul class="nav side-menu">-->
-                                    <!--<li><a><i class="fa fa-bug"></i> Additional Pages <span class="fa fa-chevron-down"></span></a>-->
-                                        <!--<ul class="nav child_menu">-->
-                                            <!--<li><a href="e_commerce.html">E-commerce</a></li>-->
-                                            <!--<li><a href="projects.html">Projects</a></li>-->
-                                            <!--<li><a href="project_detail.html">Project Detail</a></li>-->
-                                            <!--<li><a href="contacts.html">Contacts</a></li>-->
-                                            <!--<li><a href="profile.html">Profile</a></li>-->
-                                        <!--</ul>-->
-                                    <!--</li>-->
-                                    <!--<li><a><i class="fa fa-windows"></i> Extras <span class="fa fa-chevron-down"></span></a>-->
-                                        <!--<ul class="nav child_menu">-->
-                                            <!--<li><a href="page_403.html">403 Error</a></li>-->
-                                            <!--<li><a href="page_404.html">404 Error</a></li>-->
-                                            <!--<li><a href="page_500.html">500 Error</a></li>-->
-                                            <!--<li><a href="plain_page.html">Plain Page</a></li>-->
-                                            <!--<li><a href="login.html">Login Page</a></li>-->
-                                            <!--<li><a href="pricing_tables.html">Pricing Tables</a></li>-->
-                                        <!--</ul>-->
-                                    <!--</li>-->
-                                    <!--<li><a><i class="fa fa-sitemap"></i> Multilevel Menu <span class="fa fa-chevron-down"></span></a>-->
-                                        <!--<ul class="nav child_menu">-->
-                                            <!--<li><a href="#level1_1">Level One</a>-->
-                                            <!--<li><a>Level One<span class="fa fa-chevron-down"></span></a>-->
-                                                <!--<ul class="nav child_menu">-->
-                                                    <!--<li class="sub_menu"><a href="level2.html">Level Two</a>-->
-                                                    <!--</li>-->
-                                                    <!--<li><a href="#level2_1">Level Two</a>-->
-                                                    <!--</li>-->
-                                                    <!--<li><a href="#level2_2">Level Two</a>-->
-                                                    <!--</li>-->
-                                                <!--</ul>-->
-                                            <!--</li>-->
-                                            <!--<li><a href="#level1_2">Level One</a>-->
-                                            <!--</li>-->
-                                        <!--</ul>-->
-                                    <!--</li>-->
-                                <!--</ul>-->
-                            <!--</div>-->
+                            <div class="menu_section">
+                                <h3>Live On</h3>
+                                <ul class="nav side-menu">
+                                    <li><a><i class="fa fa-bug"></i> Additional Pages <span class="fa fa-chevron-down"></span></a>
+                                        <ul class="nav child_menu">
+                                            <li><a href="e_commerce.html">E-commerce</a></li>
+                                            <li><a href="projects.html">Projects</a></li>
+                                            <li><a href="project_detail.html">Project Detail</a></li>
+                                            <li><a href="contacts.html">Contacts</a></li>
+                                            <li><a href="profile.html">Profile</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a><i class="fa fa-windows"></i> Extras <span class="fa fa-chevron-down"></span></a>
+                                        <ul class="nav child_menu">
+                                            <li><a href="page_403.html">403 Error</a></li>
+                                            <li><a href="page_404.html">404 Error</a></li>
+                                            <li><a href="page_500.html">500 Error</a></li>
+                                            <li><a href="plain_page.html">Plain Page</a></li>
+                                            <li><a href="login.html">Login Page</a></li>
+                                            <li><a href="pricing_tables.html">Pricing Tables</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a><i class="fa fa-sitemap"></i> Multilevel Menu <span class="fa fa-chevron-down"></span></a>
+                                        <ul class="nav child_menu">
+                                            <li><a href="#level1_1">Level One</a>
+                                            <li><a>Level One<span class="fa fa-chevron-down"></span></a>
+                                                <ul class="nav child_menu">
+                                                    <li class="sub_menu"><a href="level2.html">Level Two</a>
+                                                    </li>
+                                                    <li><a href="#level2_1">Level Two</a>
+                                                    </li>
+                                                    <li><a href="#level2_2">Level Two</a>
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="#level1_2">Level One</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                         <!-- /sidebar menu -->
                         <!-- /menu footer buttons -->
@@ -134,11 +133,4 @@
         </div>
     <!-- end: HEADER -->
     </div>
-    <!--&lt;!&ndash;jQuery&ndash;&gt;-->
-    <!--<script src="/resources/plugins/jquery/dist/jquery.min.js"></script>-->
-    <!--&lt;!&ndash; Bootstrap &ndash;&gt;-->
-    <!--<script src="/resources/plugins/bootstrap/dist/js/bootstrap.min.js"></script>-->
-    <!--&lt;!&ndash; Custom Theme Scripts &ndash;&gt;-->
-    <!--<script src="/resources/js/custom.min.js"></script>-->
-</body>
 </html>
