搭建基础框架

--- a/web/src/main/webapp/WEB-INF/views/base/footer.html
+++ b/web/src/main/webapp/WEB-INF/views/base/footer.html
@@ -6,7 +6,7 @@
     <!-- start: FOOTER -->
     <div th:fragment="footer" class="footer clearfix">
         <div class="footer-inner">
-            2016 &copy; xiamenair.
+            2016 &copy; allen
         </div>
         <div class="footer-items">
             <span class="go-top"><i class="clip-chevron-up"></i></span>
