--- a/web/src/main/webapp/WEB-INF/views/base/layout.html
+++ b/web/src/main/webapp/WEB-INF/views/base/layout.html
@@ -17,8 +17,8 @@
 <body class="nav-md">
     <div class="container body">
         <div class="main_container">
-            <div th:replace="base/left_menu :: left_menu"></div>
-            <div th:replace="base/top_menu :: top_menu"></div>
+            <div th:replace="base/menu :: menu"></div>
+            <div th:replace="base/header :: header"></div>
             <div id="content" layout:fragment="content">
                 hello
             </div>
