--- a/web/src/main/webapp/WEB-INF/views/base/header.html
+++ b/web/src/main/webapp/WEB-INF/views/base/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <!-- top navigation -->
-<div th:fragment="top_menu" class="top_nav">
+<div th:fragment="header" class="top_nav">
     <div class="nav_menu">
         <nav>
             <div class="nav toggle">
