搭建基础框架

--- a/web/src/main/webapp/WEB-INF/views/base/layout.html
+++ b/web/src/main/webapp/WEB-INF/views/base/layout.html
@@ -19,9 +19,7 @@
         <div class="main_container">
             <div th:replace="base/menu :: menu"></div>
             <div th:replace="base/header :: header"></div>
-            <div id="content" layout:fragment="content">
-                hello
-            </div>
+            <div id="content" layout:fragment="content"></div>
         </div>
     </div>
 
