--- a/web/src/main/webapp/resources/plugins/bootstrap/less/button-groups.less
+++ b/web/src/main/webapp/resources/plugins/bootstrap/less/button-groups.less
@@ -59,7 +59,7 @@
     .border-right-radius(0);
   }
 }
-// Need .dropdown-toggle since :last-child doesn't apply given a .dropdown-menu immediately after it
+// Need .dropdown-toggle since :last-child doesn't apply given a .dropdown-system immediately after it
 .btn-group > .btn:last-child:not(:first-child),
 .btn-group > .dropdown-toggle:not(:first-child) {
   .border-left-radius(0);
@@ -111,7 +111,7 @@
   padding-right: 12px;
 }
 
-// The clickable button for toggling the menu
+// The clickable button for toggling the system
 // Remove the gradient and set the same inset shadow as the :active state
 .btn-group.open .dropdown-toggle {
   .box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
