--- a/web/src/main/webapp/resources/plugins/bootstrap/less/navs.less
+++ b/web/src/main/webapp/resources/plugins/bootstrap/less/navs.less
@@ -237,6 +237,6 @@
 .nav-tabs .dropdown-menu {
   // make dropdown border overlap tab border
   margin-top: -1px;
-  // Remove the top rounded corners here since there is a hard edge above the menu
+  // Remove the top rounded corners here since there is a hard edge above the system
   .border-top-radius(0);
 }
