--- a/web/src/main/webapp/WEB-INF/views/base/menu.html
+++ b/web/src/main/webapp/WEB-INF/views/base/menu.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <!-- start: TOP NAVIGATION CONTAINER -->
-    <div th:fragment="left_menu" class="col-md-3 left_col">
+    <div th:fragment="menu" class="col-md-3 left_col">
         <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
                 <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentelella Alela!</span></a>
             </div>
 
-            <!-- menu profile quick info -->
+            <!-- system profile quick info -->
             <div class="profile clearfix">
                 <div class="profile_pic">
                     <img src="/resources/images/img.jpg" alt="..." class="img-circle profile_img"/>
@@ -17,11 +17,11 @@
                     <h2>Allen</h2>
                 </div>
             </div>
-            <!-- /menu profile quick info -->
+            <!-- /system profile quick info -->
 
             <br />
 
-            <!-- sidebar menu -->
+            <!-- sidebar system -->
             <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
                 <div class="menu_section">
                     <h3>General</h3>
@@ -121,8 +121,8 @@
                     </ul>
                 </div>
             </div>
-            <!-- /sidebar menu -->
-            <!-- /menu footer buttons -->
+            <!-- /sidebar system -->
+            <!-- /system footer buttons -->
         </div>
     </div>
     <!-- end: HEADER -->
