--- a/web/src/main/webapp/WEB-INF/views/production/index2.html
+++ b/web/src/main/webapp/WEB-INF/views/production/index2.html
@@ -33,7 +33,7 @@
 
             <div class="clearfix"></div>
 
-            <!-- menu profile quick info -->
+            <!-- system profile quick info -->
             <div class="profile clearfix">
               <div class="profile_pic">
                 <img src="images/img.jpg" alt="..." class="img-circle profile_img">
@@ -43,11 +43,11 @@
                 <h2>John Doe</h2>
               </div>
             </div>
-            <!-- /menu profile quick info -->
+            <!-- /system profile quick info -->
 
             <br />
 
-            <!-- sidebar menu -->
+            <!-- sidebar system -->
             <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
               <div class="menu_section">
                 <h3>General</h3>
@@ -149,9 +149,9 @@
               </div>
 
             </div>
-            <!-- /sidebar menu -->
+            <!-- /sidebar system -->
 
-            <!-- /menu footer buttons -->
+            <!-- /system footer buttons -->
             <div class="sidebar-footer hidden-small">
               <a data-toggle="tooltip" data-placement="top" title="Settings">
                 <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
@@ -166,7 +166,7 @@
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
               </a>
             </div>
-            <!-- /menu footer buttons -->
+            <!-- /system footer buttons -->
           </div>
         </div>
 
