--- a/web/src/main/webapp/resources/plugins/bootstrap/less/navbar.less
+++ b/web/src/main/webapp/resources/plugins/bootstrap/less/navbar.less
@@ -323,12 +323,12 @@
 
 // Dropdown menus
 
-// Menu position and menu carets
+// MenuPo position and system carets
 .navbar-nav > li > .dropdown-menu {
   margin-top: 0;
   .border-top-radius(0);
 }
-// Menu position and menu caret support for dropups via extra dropup class
+// MenuPo position and system caret support for dropups via extra dropup class
 .navbar-fixed-bottom .navbar-nav > li > .dropdown-menu {
   margin-bottom: 0;
   .border-top-radius(@navbar-border-radius);
@@ -453,7 +453,7 @@
     border-color: @navbar-default-border;
   }
 
-  // Dropdown menu items
+  // Dropdown system items
   .navbar-nav {
     // Remove background color from open dropdown
     > .open > a {
