--- a/web/src/main/webapp/resources/plugins/bootstrap/less/variables.less
+++ b/web/src/main/webapp/resources/plugins/bootstrap/less/variables.less
@@ -229,13 +229,13 @@
 
 //== Dropdowns
 //
-//## Dropdown menu container and contents.
+//## Dropdown system container and contents.
 
-//** Background for the dropdown menu.
+//** Background for the dropdown system.
 @dropdown-bg:                    #fff;
-//** Dropdown menu `border-color`.
+//** Dropdown system `border-color`.
 @dropdown-border:                rgba(0,0,0,.15);
-//** Dropdown menu `border-color` **for IE8**.
+//** Dropdown system `border-color` **for IE8**.
 @dropdown-fallback-border:       #ccc;
 //** Divider color for between dropdown items.
 @dropdown-divider-bg:            #e5e5e5;
@@ -247,12 +247,12 @@
 //** Hover background for dropdown links.
 @dropdown-link-hover-bg:         #f5f5f5;
 
-//** Active dropdown menu item text color.
+//** Active dropdown system item text color.
 @dropdown-link-active-color:     @component-active-color;
-//** Active dropdown menu item background color.
+//** Active dropdown system item background color.
 @dropdown-link-active-bg:        @component-active-bg;
 
-//** Disabled dropdown menu item background color.
+//** Disabled dropdown system item background color.
 @dropdown-link-disabled-color:   @gray-light;
 
 //** Text color for headers within dropdown menus.
