--- a/web/src/main/webapp/WEB-INF/views/book/aa.html
+++ b/web/src/main/webapp/WEB-INF/views/book/aa.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="base/layout">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{base/layout}">
 
 <head>
     <title>Home</title>
 </head>
-    <div layout:fragment="content" th:remove="tag" >
-    </div>
+<body>
+<div layout:fragment="content" >
+</div>
+</body>
 </html>
