--- a/web/src/main/webapp/WEB-INF/views/base/layout.html
+++ b/web/src/main/webapp/WEB-INF/views/base/layout.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link href="/resources/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <!-- Custom Theme Style -->
-    <link href="/resources/css/custom.min.css" rel="stylesheet"/>
+    <link href="/resources/css/custom.css" rel="stylesheet"/>
 
 </head>
 <body class="nav-md">
@@ -27,8 +27,10 @@
     <script src="/resources/plugins/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
     <script src="/resources/plugins/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- bootstrap-progressbar -->
+    <script src="/resources/plugins/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
     <!-- Custom Theme Scripts -->
-    <script src="/resources/js/custom.min.js"></script>
+    <script src="/resources/js/custom.js"></script>
 
 </body>
 </html>
