搭建基础框架

--- a/web/src/main/webapp/WEB-INF/views/base/footer.html
+++ b/web/src/main/webapp/WEB-INF/views/base/footer.html
@@ -3,15 +3,13 @@
 <head>
 </head>
 <body>
-    <!-- start: FOOTER -->
-    <div th:fragment="footer" class="footer clearfix">
-        <div class="footer-inner">
-            2016 &copy; allen
+    <!-- footer content -->
+    <footer th:fragment="footer">
+        <div class="pull-right">
+            Created by Allen
         </div>
-        <div class="footer-items">
-            <span class="go-top"><i class="clip-chevron-up"></i></span>
-        </div>
-    </div>
-    <!-- end: FOOTER -->
+        <div class="clearfix"></div>
+    </footer>
+    <!-- /footer content -->
 </body>
 </html>
