--- a/web/src/main/webapp/WEB-INF/views/base/layout.html
+++ b/web/src/main/webapp/WEB-INF/views/base/layout.html
@@ -14,12 +14,13 @@
     <link href="/resources/css/custom.css" rel="stylesheet"/>
 
 </head>
-<body class="nav-md">
+<body class="nav-md footer_fixed">
     <div class="container body">
         <div class="main_container">
             <div th:replace="base/menu :: menu"></div>
             <div th:replace="base/header :: header"></div>
-            <div id="content" layout:fragment="content"></div>
+            <div layout:fragment="content"></div>
+            <div th:replace="base/footer::footer"></div>
         </div>
     </div>
 
@@ -31,6 +32,8 @@
     <script src="/resources/plugins/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
     <!-- Custom Theme Scripts -->
     <script src="/resources/js/custom.js"></script>
+
+    <section layout:fragment="script"></section>
 
 </body>
 </html>
