--- a/web/src/main/webapp/WEB-INF/views/system/menuManage.html
+++ b/web/src/main/webapp/WEB-INF/views/system/menuManage.html
@@ -26,40 +26,37 @@
                         </div>
                         <div class="x_content">
                             <br />
-                            <form id="addMenu" data-parsley-validate class="form-horizontal form-label-left">
+                            <form  data-parsley-validate class="form-horizontal form-label-left">
 
                                 <div class="form-group">
-                                    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">父节点<span class="required">*</span>
-                                    </label>
+                                    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="parentName">父节点</label>
                                     <div class="col-md-6 col-sm-6 col-xs-12">
-                                        <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12">
+                                        <input type="text" id="parentName" name="parentName" required="required" class="form-control col-md-7 col-xs-12">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">菜单名称<span class="required">*</span>
-                                    </label>
+                                    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="menuName">名称</label>
                                     <div class="col-md-6 col-sm-6 col-xs-12">
-                                        <input type="text" id="last-name" name="last-name" required="required" class="form-control col-md-7 col-xs-12">
+                                        <input type="text" id="menuName" name="menuName" required="required" class="form-control col-md-7 col-xs-12">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">图标</label>
+                                    <label for="menuIndex" class="control-label col-md-3 col-sm-3 col-xs-12">顺序</label>
                                     <div class="col-md-6 col-sm-6 col-xs-12">
-                                        <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name">
+                                        <input id="menuIndex" name="menuIndex" class="date-picker form-control col-md-7 col-xs-12" required="required" type="text">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="iconClass" class="control-label col-md-3 col-sm-3 col-xs-12">图标</label>
+                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                        <input id="iconClass" name="iconClass" class="form-control col-md-7 col-xs-12" type="text" >
                                     </div>
                                 </div>
 
-                                <div class="form-group">
-                                    <label class="control-label col-md-3 col-sm-3 col-xs-12">顺序<span class="required">*</span>
-                                    </label>
-                                    <div class="col-md-6 col-sm-6 col-xs-12">
-                                        <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" required="required" type="text">
-                                    </div>
-                                </div>
                                 <div class="ln_solid"></div>
                                 <div class="form-group">
                                     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                                        <button type="submit" class="btn btn-success">提交</button>
+                                        <button id="button_addMenu" class="btn btn-success">提交</button>
                                     </div>
                                 </div>
 
@@ -72,5 +69,38 @@
     </div>
     <!-- /page content -->
 </div>
+
 </body>
+
+<div layout:fragment="script">
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $("#button_addMenu").click(function(){
+                var parentName = $("#parentName").val();
+                var menuName = $("#menuName").val();
+                var menuIndex = $("#menuIndex").val();
+                var iconClass = $("#iconClass").val();
+
+                var menuVo = {parentName:parentName,
+                    menuName:menuName,
+                    menuIndex:menuIndex,
+                    iconClass:iconClass
+                };//拼装成json格式
+
+                $.ajax({
+                    type:"POST",
+                    url:"/addMenu",
+                    data:menuVo,
+                    success:function(){
+                        alert("成功");
+                    },
+                    error:function(e) {
+                        alert("出错："+e);
+                    }
+                });
+            });
+        });
+    </script>
+
+</div>
 </html>
