搭建基础框架

--- a/web/src/main/webapp/WEB-INF/views/base/menu.html
+++ b/web/src/main/webapp/WEB-INF/views/base/menu.html
@@ -26,11 +26,12 @@
                 <div class="menu_section">
                     <h3>General</h3>
                     <ul class="nav side-menu">
-                        <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                        <li><a><i class="fa fa-home"></i> 系统参数 <span class="fa fa-chevron-down"></span></a>
                             <ul class="nav child_menu">
-                                <li><a href="/menuManage">菜单管理</a></li>
-                                <li><a href="/aa">aa</a></li>
-                                <li><a href="/">首页</a></li>
+                                <li><a href="/menu/menuManage">菜单</a></li>
+                                <li><a href="/permission/permissionManage">权限</a></li>
+                                <li><a href="/role/roleManage">角色</a></li>
+                                <li><a href="/user/userManage">用户</a></li>
                             </ul>
                         </li>
                         <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
