--- a/web/src/main/webapp/WEB-INF/views/system/permission.html
+++ b/web/src/main/webapp/WEB-INF/views/system/permission.html
@@ -3,19 +3,25 @@
       layout:decorate="base/layout">
 
 <head>
-    <title>菜单管理</title>
+    <title>权限管理</title>
+    <link rel="stylesheet" href="/resources/plugins/zTree/zTreeStyle.css"/>
 </head>
 <body>
 <div layout:fragment="content" >
     <!-- page content -->
     <div class="right_col" role="main">
+
+
         <div class="">
             <div class="page-title">
                 <div class="title_left">
-                    <h3>菜单管理</h3>
+                    <h3>权限管理</h3>
                 </div>
             </div>
             <div class="clearfix"></div>
+            <div class="row">
+                <ul id="navigationTree" class="ztree nav nav-pills nav-stacked"></ul>
+            </div>
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="x_panel">
@@ -73,31 +79,98 @@
 </body>
 
 <div layout:fragment="script">
+    <script src="/resources/plugins/zTree/jquery.ztree.core-3.5.js"></script>
     <script type="text/javascript">
-        $(document).ready(function(){
-            $("#button_addMenu").click(function(){
-                var parentName = $("#parentName").val();
-                var menuName = $("#menuName").val();
-                var menuIndex = $("#menuIndex").val();
-                var iconClass = $("#iconClass").val();
 
-                var menuVo = {parentName:parentName,
-                    menuName:menuName,
-                    menuIndex:menuIndex,
-                    iconClass:iconClass
-                };//拼装成json格式
+        //------zTree数据
+        $(function () {
+            $.fn.zTree.init($("#navigationTree"), setting);
 
-                $.ajax({
-                    type:"POST",
-                    url:"/addMenu",
-                    data:menuVo,
-                    success:function(){
-                        alert("成功");
-                    },
-                    error:function(e) {
-                        alert("出错："+e);
-                    }
-                });
+            MessengerAjaxGet("/Navigation/getNavigationPageData", null, function(data){
+                InitControllerActionListSelect(data);
+            });
+        });
+
+        var setting = {
+            view: {
+                showIcon: showIconForTree,
+                showLine: false
+            },
+            data: {
+                key: {
+                    name: "itemName"
+                },
+                simpleData: {
+                    enable: true,
+                    idKey: "guid",
+                    pIdKey: "fatherGuid",
+                    rootPId: 0
+                }
+            },
+            async: {
+                enable: true,
+                url: "/menu/get",
+                type: "get"
+            },
+            callback: {
+                onAsyncSuccess: zTreeOnAsyncSuccess
+            }
+        };
+
+        function showIconForTree(treeId, treeNode) {
+            return !treeNode.isParent;
+        }
+
+        function zTreeOnAsyncSuccess(event, treeId, msg) {
+            var zTree = $.fn.zTree.getZTreeObj(treeId);
+            zTree.expandAll(true);
+
+            var nodes = zTree.getNodes();
+            InitNavigationListSelect(nodes);
+        }
+
+        function InitNavigationListSelect(navigationList) {
+            $('#fatherGuid').empty();
+            $('#fatherGuid').append("<option value=''></option>");
+            for (var i = 0; i < navigationList.length; ++i) {
+                $('#fatherGuid').append('<option value="' + navigationList[i].guid + '">' + navigationList[i].itemName + '</option>');
+            }
+        }
+
+        function InitControllerActionListSelect(controllerActionList) {
+            $('#urlGuid').empty();
+            $('#urlGuid').append("<option value=''></option>");
+            for (var j = 0; j < controllerActionList.length; ++j) {
+                $('#urlGuid').append('<option value="' + controllerActionList[j].guid + '">' +
+                        controllerActionList[j].url +
+                        '(' + controllerActionList[j].description + ')'
+                        + '</option>');
+            }
+        }
+
+
+        $("#button_addMenu").click(function(){
+            var parentName = $("#parentName").val();
+            var menuName = $("#menuName").val();
+            var menuIndex = $("#menuIndex").val();
+            var iconClass = $("#iconClass").val();
+
+            var menuVo = {parentName:parentName,
+                menuName:menuName,
+                menuIndex:menuIndex,
+                iconClass:iconClass
+            };//拼装成json格式
+
+            $.ajax({
+                type:"POST",
+                url:"/addMenu",
+                data:menuVo,
+                success:function(){
+                    alert("成功");
+                },
+                error:function(e) {
+                    alert("出错："+e);
+                }
             });
         });
     </script>
