搭建基础框架

--- a/web/src/main/webapp/WEB-INF/views/base/layout.html
+++ b/web/src/main/webapp/WEB-INF/views/base/layout.html
@@ -10,6 +10,8 @@
     <link href="/resources/plugins/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <!-- Font Awesome -->
     <link href="/resources/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
+    <!-- Messenger -->
+    <link href="/resources/plugins/messenger/css/messenger.css" rel="stylesheet"/>
     <!-- Custom Theme Style -->
     <link href="/resources/css/custom.css" rel="stylesheet"/>
 
@@ -32,6 +34,9 @@
     <script src="/resources/plugins/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
     <!-- Custom Theme Scripts -->
     <script src="/resources/js/custom.js"></script>
+    <!-- Messenger-->
+    <script src="/resources/plugins/messenger/js/messenger.min.js"></script>
+    <script src="/resources/js/messenger-common.js"></script>
 
     <section layout:fragment="script"></section>
 
