--- a/web/src/main/webapp/WEB-INF/views/system/menu.html
+++ b/web/src/main/webapp/WEB-INF/views/system/menu.html
@@ -35,18 +35,25 @@
                             <form  data-parsley-validate class="form-horizontal form-label-left">
 
                                 <div class="form-group">
+                                    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="parentGuid">父菜单</label>
+                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                        <select class="form-control" id="parentGuid" name="parentGuid">
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
                                     <label class="control-label col-md-3 col-sm-3 col-xs-12" for="menuName">名称</label>
                                     <div class="col-md-6 col-sm-6 col-xs-12">
                                         <input type="text" id="menuName" name="menuName" required="required" class="form-control col-md-7 col-xs-12">
                                     </div>
                                 </div>
-                                <!--<div class="form-group">-->
-                                    <!--<label class="control-label col-md-3 col-sm-3 col-xs-12" for="resource">资源</label>-->
-                                    <!--<div class="col-md-6 col-sm-6 col-xs-12">-->
-                                        <!--<select class="form-control" id="resource" name="resource">-->
-                                        <!--</select>-->
-                                    <!--</div>-->
-                                <!--</div>-->
+                                <div class="form-group">
+                                    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="resourceGuid">资源</label>
+                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                        <select class="form-control" id="resourceGuid" name="resourceGuid">
+                                        </select>
+                                    </div>
+                                </div>
                                 <div class="form-group">
                                     <label for="menuIndex" class="control-label col-md-3 col-sm-3 col-xs-12">顺序</label>
                                     <div class="col-md-6 col-sm-6 col-xs-12">
@@ -87,9 +94,15 @@
         $(function () {
             $.fn.zTree.init($("#navigationTree"), setting);
 
+            MessengerAjaxGet("/menu/getMainMenus", null, function(data){
+                InitMainMenusSelect(data);
+            });
+
             MessengerAjaxGet("/resource/getAllResources", null, function(data){
                 InitResourcesSelect(data);
             });
+
+
         });
 
         var setting = {
@@ -130,20 +143,20 @@
 //            InitNavigationListSelect(nodes);
         }
 
-        function InitNavigationListSelect(navigationList) {
-            $('#parentName').empty();
-            $('#fatherGuid').append("<option value=''></option>");
-            for (var i = 0; i < navigationList.length; ++i) {
-                $('#fatherGuid').append('<option value="' + navigationList[i].guid + '">' + navigationList[i].itemName + '</option>');
+        function InitMainMenusSelect(mainMenus) {
+            $('#parentGuid').empty();
+            $('#parentGuid').append("<option value=''></option>");
+            for (var i = 0; i < mainMenus.length; ++i) {
+                $('#parentGuid').append('<option value="' + mainMenus[i].guid + '">' + mainMenus[i].menuName + '</option>');
             }
         }
 
         function InitResourcesSelect(resources) {
 
-            $('#resource').empty();
-            $('#resource').append("<option value=''></option>");
+            $('#resourceGuid').empty();
+            $('#resourceGuid').append("<option value=''></option>");
             for (var j = 0; j < resources.length; ++j) {
-                $('#resource').append('<option value="' + resources[j].guid + '">' +
+                $('#resourceGuid').append('<option value="' + resources[j].guid + '">' +
                         '(' + resources[j].description + ')'+
                         resources[j].resource
                         + '</option>');
@@ -153,12 +166,15 @@
 
         $("#button_addMenu").click(function(){
 
-//            $("#itemmodal").modal();
+            var parentGuid = $("#parentGuid").val();
+            var resourceGuid = $("#resourceGuid").val();
             var menuName = $("#menuName").val();
             var menuIndex = $("#menuIndex").val();
             var iconClass = $("#iconClass").val();
 
             var menuVo = {
+                parentGuid:parentGuid,
+                resourceGuid:resourceGuid,
                 menuName:menuName,
                 menuIndex:menuIndex,
                 iconClass:iconClass
@@ -168,12 +184,6 @@
                 type:"POST",
                 url:"/menu/addMenu",
                 data:menuVo,
-                success:function(){
-                    alert("成功");
-                },
-                error:function(e) {
-                    alert("出错："+e);
-                }
             });
         });
     </script>
