--- a/web/src/main/webapp/resources/plugins/bootstrap/less/dropdowns.less
+++ b/web/src/main/webapp/resources/plugins/bootstrap/less/dropdowns.less
@@ -130,7 +130,7 @@
   }
 }
 
-// MenuPo positioning
+// Menu positioning
 //
 // Add extra class to `.dropdown-system` to flip the alignment of the dropdown
 // system with the parent.
