--- a/web/src/main/webapp/resources/plugins/bootstrap/less/navbar.less
+++ b/web/src/main/webapp/resources/plugins/bootstrap/less/navbar.less
@@ -323,12 +323,12 @@
 
 // Dropdown menus
 
-// MenuPo position and system carets
+// Menu position and system carets
 .navbar-nav > li > .dropdown-menu {
   margin-top: 0;
   .border-top-radius(0);
 }
-// MenuPo position and system caret support for dropups via extra dropup class
+// Menu position and system caret support for dropups via extra dropup class
 .navbar-fixed-bottom .navbar-nav > li > .dropdown-menu {
   margin-bottom: 0;
   .border-top-radius(@navbar-border-radius);
