搭建基础框架

--- a/web/src/main/webapp/WEB-INF/views/base/menu.html
+++ b/web/src/main/webapp/WEB-INF/views/base/menu.html
@@ -29,7 +29,7 @@
                         <!--/*@thymesVar id="menuList" type=""*/-->
                         <li th:each="parentTmp:${menuList}" th:if="${parentTmp.parentGuid}==''">
                             <a>
-                                <i class="fa fa-home"></i>
+                                <i th:class="${parentTmp.iconClass}"></i>
                                 <span th:text="${parentTmp.menuName}"></span>
                                 <span class="fa fa-chevron-down"></span>
                             </a>
