搭建基础框架

--- a/web/src/main/webapp/WEB-INF/views/system/menu.html
+++ b/web/src/main/webapp/WEB-INF/views/system/menu.html
@@ -92,7 +92,7 @@
 
         //------zTree数据
         $(function () {
-            $.fn.zTree.init($("#navigationTree"), setting);
+//            $.fn.zTree.init($("#navigationTree"), setting);
 
 //            menu.getMenus();
 
