搭建基础框架

--- a/web/src/main/webapp/WEB-INF/views/base/layout.html
+++ b/web/src/main/webapp/WEB-INF/views/base/layout.html
@@ -19,7 +19,7 @@
 <body class="nav-md footer_fixed">
     <div class="container body">
         <div class="main_container">
-            <div th:replace="base/menu :: menu(menuList=${T(com.babel.web.system.web.MenuController).getMenus()})"></div>
+            <div th:replace="base/menu :: menu(menuList=${T(com.babel.web.system.controller.MenuController).getMenus()})"></div>
             <div th:replace="base/header :: header"></div>
             <div layout:fragment="content"></div>
             <div th:replace="base/footer::footer"></div>
